HW10_commit_1(exception)